Closed Bug 1351286 Opened 7 years ago Closed 7 years ago

stylo: Intermittent tart | application crashed [@ nsHTMLStyleSheet::CalculateMappedServoDeclarations]

Categories

(Core :: CSS Parsing and Computation, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox52 --- unaffected
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: heycam)

Details

(Keywords: crash, intermittent-failure, Whiteboard: [stockwell fixed])

Attachments

(4 files)

Attached file crash stack
heycam: can you take a look at this crash, thanks!
Flags: needinfo?(cam)
Keywords: crash
Attached file tart.log
Talos log (running locally)
Attached file tart-no-e10s.log
Non-e10s version
this has hit our 30 failures/week threshold, :heycam, can you update any progress here or ask for others to help?
Whiteboard: [stockwell needswork]
Summary: Intermittent tart | application crashed [@ nsHTMLStyleSheet::CalculateMappedServoDeclarations] → stylo: Intermittent tart | application crashed [@ nsHTMLStyleSheet::CalculateMappedServoDeclarations]
Sorry Joel, I lost this needinfo in a backlog of email.

My guess is that the crash is due to mDocument->GetShell() returning null in nsHTMLStyleSheet::CalculateMappedServoDeclarations.  Since further up the stack there is an nsPresContext being notified of a pref change, which eventually calls into ProcessPendingRestyles on the style set for the same document, I'd further guess that GetShell() is returning null due to the document being in the bfcache.  I guess we do want to process the restyles here...
Flags: needinfo?(cam)
Comment on attachment 8856116 [details]
Bug 1351286 - stylo: Make Servo mapped attributes mechanism cope with the document being in the bfcache.

https://reviewboard.mozilla.org/r/128056/#review130638

r=dbaron, but could you file a followup bug on the fact that we really shouldn't be doing this work synchronously for pref changes when documents are in the bfcache.  (Probably background tabs too!)
Attachment #8856116 - Flags: review?(dbaron) → review+
Filed bug 1354873.
Pushed by cmccormack@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b06bd4311713
stylo: Make Servo mapped attributes mechanism cope with the document being in the bfcache. r=dbaron
Whiteboard: [stockwell needswork] → [stockwell fixed]
Priority: -- → P1
https://hg.mozilla.org/mozilla-central/rev/b06bd4311713
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: