Bug 1351286 - stylo: Make Servo mapped attributes mechanism cope with the document being in the bfcache. r=dbaron

MozReview-Commit-ID: H8tpBVKf3xo

--HG--
extra : rebase_source : 698a30deb1ab8ac4840dc6791e4cf12b3be6c5df